first version of experiments for experimental station. TODO add button for logbook and drop down menu with measurements

--- a/templates/LabLogbook/experiment_list.html
+++ b/templates/LabLogbook/experiment_list.html
@@ -1,13 +1,14 @@
 {% extends "UdyniManagement/page.html" %}
 {% block content %}
 
-<a href="{% url 'experimentalstation_view' %}"  class="btn btn-primary btn-icon-split mb-4" aria-label="Go back to Experimental Stations">
+<a href="{% url 'lab_and_experimentalstation_view' %}"  class="btn btn-primary btn-icon-split mb-4" aria-label="Labs & Exp Stations">
   <span class="icon text-white-50">
     <i class="fas fa-arrow-left"></i>
   </span>
-  <span class="text">Go back to Experimental Stations</span>
+  <span class="text">Labs & Exp Stations</span>
 </a>
 
+<div>
 {% if can_edit %}
 <a href="{% url 'experiment_add' station_id=this_station_id %}" class="btn btn-primary btn-icon-split mb-4" aria-label="Add experiment for this experimental station">
   <span class="icon text-white-50">
@@ -16,11 +17,12 @@
   <span class="text">Add experiment for this experimental station</span>
 </a>
 {% endif %}
+</div>
 
 {% for experiment in object_list %}
   <div class="card shadow mb-4">
     <div class="card-header">
-      <h6 class="m-0 font-weight-bold text-primary">{{ experiment.experiment_id }}</h6>
+      <h6 class="m-0 font-weight-bold text-primary">Experiment ID: {{ experiment.experiment_id }}</h6>
     </div>
     <div class="card-body table-responsive">
       <table cellspacing="0" cellpadding="0" class="table table-sm table-hover reporting">
@@ -37,22 +39,22 @@
           </tr>
         </thead>
         <tbody>
-        <!-- {% for experiment in group.list %} -->
+        
           <tr>
             <td>{{ experiment.creation_time }}</td>
             <td>{{ experiment.project }}</td>
             <td>{{ experiment.reference }}</td>
-            <td>{{ experiment.description }}</td>
-            <td>{{ experiment.samples }}</td>
-            
+            <td>{{ experiment.description }}</td>            
             <td>
-              {% for sample in experiment.samples %}
-                {{ sample.name }}
-                {% if can_edit_sample %}
-                  <a href="{% url 'sample_mod' pk=sample.sample_id %}" aria-label="Modify"><i class="fas fa-pencil" aria-hidden="true"></i></a>
-                  <a href="{% url 'sample_del' pk=sample.sample_id %}" aria-label="Delete"><i class="fas fa-trash-can" aria-hidden="true"></i></a>
-                {% endif %}
-                <br />
+              {% for sfe in experiment.samples %}
+                <div>
+                  {{ sfe.sample.name }}
+                  {% if can_edit %}
+                    <a href="{% url 'experiment_sample_del' station_id=this_station_id experiment_id=experiment.experiment_id pk=sfe.pk %}" aria-label="Delete"><i class="fas fa-times-circle" aria-hidden="true"></i></a>
+                  {% endif %}
+                </div>
+              {% empty %}
+                <em>No samples</em>
               {% endfor %}
             </td>
 
@@ -61,21 +63,14 @@
 
             <td class="col-actions">
               {% if can_edit %}
-                <!-- TODO ADD SAMPLE -->
-                <a href="{% url 'experiment_mod' pk=experiment.experiment_id %}" aria-label="Modify"><i class="fas fa-pencil" aria-hidden="true"></i></a>
-                <a href="{% url 'experiment_del' pk=experiment.experiment_id %}" aria-label="Delete"><i class="fas fa-trash-can" aria-hidden="true"></i></a>
+                <a href="{% url 'experiment_mod' station_id=this_station_id pk=experiment.experiment_id %}" aria-label="Modify"><i class="fas fa-pencil" aria-hidden="true"></i></a>
+                <a href="{% url 'experiment_del' station_id=this_station_id pk=experiment.experiment_id %}" aria-label="Delete"><i class="fas fa-trash-can" aria-hidden="true"></i></a>
+                <a href="{% url 'experiment_sample_add' station_id=this_station_id experiment_id=experiment.experiment_id %}" aria-label="Add existing sample"><i class="fas fa-circle-plus" aria-hidden="true"></i></a>
               {% endif %}
-              <!-- {% if perms.Experiments.costs_manage %}
-                <a href="{% url 'experiment_view' station_id=experimentalstation.station_id %}"  class="btn btn-sm btn-primary btn-icon-split" aria-label="Show experiments">
-                  <span class="icon text-white-50">
-                    <i class="fas fa-arrow-right"></i>
-                  </span>
-                  <span class="text">Show experiments</span>
-                </a>
-              {% endif %} -->
+              <!-- TODO GO TO LOGBOOK button-->
             </td>
           </tr>
-        <!-- {% endfor %} -->
+        
         </tbody>
       </table>
     </div>
