--- a/templates/LabLogbook/experiment_list.html
+++ b/templates/LabLogbook/experiment_list.html
@@ -1,6 +1,7 @@
 {% extends "UdyniManagement/page.html" %}
 {% block content %}
 
+<!-- Button for going back to the previous page -->
 <a href="{% url 'lab_and_experimentalstation_view' %}"  class="btn btn-primary btn-icon-split mb-4" aria-label="Labs & Exp Stations">
   <span class="icon text-white-50">
     <i class="fas fa-arrow-left"></i>
@@ -67,7 +68,15 @@
                 <a href="{% url 'experiment_del' station_id=this_station_id pk=experiment.experiment_id %}" aria-label="Delete"><i class="fas fa-trash-can" aria-hidden="true"></i></a>
                 <a href="{% url 'experiment_sample_add' station_id=this_station_id experiment_id=experiment.experiment_id %}" aria-label="Add existing sample"><i class="fas fa-circle-plus" aria-hidden="true"></i></a>
               {% endif %}
-              <!-- TODO GO TO LOGBOOK button-->
+              <!-- In the future only participants to the experiment will see this button -->
+              {% if True %}
+                <a href="{% url 'comment_view' station_id=this_station_id experiment_id=experiment.experiment_id %}"  class="btn btn-sm btn-primary btn-icon-split" aria-label="Show Logbook">
+                  <span class="icon text-white-50">
+                    <i class="fas fa-arrow-right"></i>
+                  </span>
+                  <span class="text">Show Logbook</span>
+                </a>
+              {% endif %}
             </td>
           </tr>
         
