removed shadow from cards for a flatter more minimal interface

--- a/templates/LabLogbook/experiment_list.html
+++ b/templates/LabLogbook/experiment_list.html
@@ -21,7 +21,7 @@
 </div>
 
 {% for experiment in object_list %}
-  <div class="card shadow mb-4">
+  <div class="card mb-4">
     <div class="card-header">
       <h6 class="m-0 font-weight-bold text-primary">Experiment ID: {{ experiment.experiment_id }}</h6>
     </div>
