--- a/templates/LabLogbook/comment_content_history_list.html
+++ b/templates/LabLogbook/comment_content_history_list.html
@@ -23,7 +23,7 @@
         <h6 class="m-0 font-weight-bold text-primary">Refers to measurment: {{ comment.measurment }}: </h6>
       {% endif %}
       <h6 class="m-0 font-weight-bold text-primary">ID: {{ comment.comment_id }} - Content version: {{ comment_content.version }}</h6>
-      <h6 class="m-0 font-weight-bold text-primary">Last edited by {{ comment_content.author }} - {{ comment_content.timestamp }}</h6>
+      <h6 class="m-0 font-weight-bold text-primary">Edited by {{ comment_content.author }} - {{ comment_content.timestamp }}</h6>
     </div>
     <div class="card-body table-responsive">
       <table cellspacing="0" cellpadding="0" class="table table-sm table-hover reporting">
