added check for deleted comments. These comments cannot be edited

--- a/templates/LabLogbook/comment_form.html
+++ b/templates/LabLogbook/comment_form.html
@@ -5,11 +5,15 @@
 <div class="card mb-4">
   <div class="card-body">
 
-    {% if machine_generated %}
+    {% if machine_generated or deleted %}
 
       <div class="text-center">
-        <!-- The button for editing machine generated comment is not shown in logbook view, this is just in case the link is accessed -->
+        <!-- The button for editing machine generated or deleted comment is not shown in logbook view, this is just in case the link is accessed -->
+        {% if machine_generated %}
         <h1 class="text-gray-900 mb-4">This is a machine generated comment, it cannot be edited.</h1>
+        {% else %}
+        <h1 class="text-gray-900 mb-4">This comment has been deleted from the logbook, it cannot be edited.</h1>
+        {% endif %}
       </div>
 
       <a href="{{ back_url }}" aria-label="Cancel" class="btn btn-danger btn-icon-split">
