now when a comment is deleted its descendants are deleted too

--- a/templates/LabLogbook/comment_confirm_delete.html
+++ b/templates/LabLogbook/comment_confirm_delete.html
@@ -27,7 +27,7 @@
         <p>{{ message }}
         <a href="{% url 'comment_content_history' station_id=station_id experiment_id=experiment_id pk=pk %}" aria-label="See history"><i class="fas fa-link" aria-hidden="true"></i></a>
         <div>
-            Save the link for future reference. You won't be able to see the comment anymore in the Logbook list.
+            Save the link for future reference. You won't be able to see the comment and its replies anymore in the Logbook list.
         </div>
         </p>
 
