--- a/templates/LabLogbook/comment_list.html
+++ b/templates/LabLogbook/comment_list.html
@@ -49,7 +49,7 @@
               <h6 class="m-0 font-weight-bold text-primary">Refers to measurment: {{ comment.measurment }}: </h6>
             {% endif %}
             
-            <h6 class="m-0 font-weight-bold text-primary">ID: {{ comment.comment_id }} - Content version: {{ latest.version }}</h6>
+            <h6 class="m-0 font-weight-bold text-primary">Comment ID: {{ comment.comment_id }} - Content version: {{ latest.version }}</h6>
 
             <!-- Show if the comment has been deleted -->
             {% if not latest.author %}
