--- a/templates/LabLogbook/comment_content_history_list.html
+++ b/templates/LabLogbook/comment_content_history_list.html
@@ -20,7 +20,7 @@
       {% endif %}
       <h6 class="m-0 font-weight-bold text-primary">Comment type: {{ comment.type }}</h6>
       {% if comment.measurement %}
-        <h6 class="m-0 font-weight-bold text-primary">Refers to measurment: {{ comment.measurment }}: </h6>
+        <h6 class="m-0 font-weight-bold text-primary">Refers Measurement ID: {{ comment.measurement.measurement_id }} </h6>
       {% endif %}
       <h6 class="m-0 font-weight-bold text-primary">Comment ID: {{ comment.comment_id }} - Content version: {{ comment_content.version }}</h6>
       
@@ -43,7 +43,7 @@
         </thead>
         <tbody>
           <tr>
-            <td>{{ comment_content.text }}</td>
+            <td style="white-space: pre-wrap;">{{ comment_content.text }}</td>
           </tr>
         </tbody>
       </table>
