--- a/templates/LabLogbook/comment_reply_form.html
+++ b/templates/LabLogbook/comment_reply_form.html
@@ -32,7 +32,7 @@
               {% endif %}
               <h6 class="m-0 font-weight-bold text-primary">Comment type: {{ comment_to_reply.type }}</h6>
               {% if comment_to_reply.measurement %}
-                <h6 class="m-0 font-weight-bold text-primary">Refers to measurment: {{ comment_to_reply.measurment }}: </h6>
+                <h6 class="m-0 font-weight-bold text-primary">Refers Measurement ID: {{ comment_to_reply.measurement.measurement_id }} </h6>
               {% endif %}
               <h6 class="m-0 font-weight-bold text-primary">Comment ID: {{ comment_to_reply.comment_id }} - Content version: {{ comment_content_to_reply.version }}</h6>
               {% if not comment_content_to_reply.author %}
@@ -50,7 +50,7 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td>{{ comment_content_to_reply.text }}</td>
+                    <td style="white-space: pre-wrap;">{{ comment_content_to_reply.text }}</td>
                   </tr>
                 </tbody>
               </table>
