--- a/templates/LabLogbook/comment_content_history_list.html
+++ b/templates/LabLogbook/comment_content_history_list.html
@@ -16,7 +16,7 @@
   <div class="card mb-4">
     <div class="card-header">
       {% if not comment_content.author %}
-        <h6 class="m-0 font-weight-bold text-primary">AUTO GENERATED COMMENT</h6>
+        <h6 class="m-0 font-weight-bold" style="color: #c0392b;">AUTO GENERATED COMMENT</h6>
       {% endif %}
       <h6 class="m-0 font-weight-bold text-primary">Comment type: {{ comment.type }}</h6>
       {% if comment.measurement %}
