--- a/templates/LabLogbook/sample_for_experiment_form.html
+++ b/templates/LabLogbook/sample_for_experiment_form.html
@@ -4,25 +4,40 @@
 
 <div class="card mb-4">
   <div class="card-body">
+    {% if all_samples_used %}
 
-    <form action="" method="post"{% if enctype %} enctype="{{ enctype }}"{% endif %}>
-    {% csrf_token %}
-      <div>
-        {{ form|crispy }}
-        <button type="submit" class="btn btn-success btn-icon-split" aria-label="Save">
-          <span class="icon text-white-50">
-            <i class="fas fa-floppy-disk"></i>
-          </span>
-          <span class="text">Save</span>
-        </button>
+        <div class="alert alert-warning" role="alert">
+            All existing samples have already been added to this experiment.
+        </div>
         <a href="{{ back_url }}" aria-label="Cancel" class="btn btn-danger btn-icon-split">
-          <span class="icon text-white-50">
-            <i class="fas fa-xmark"></i>
-          </span>
-          <span class="text">Cancel</span>
+            <span class="icon text-white-50">
+                <i class="fas fa-xmark"></i>
+            </span>
+            <span class="text">Cancel</span>
         </a>
-      </div>
-    </form>
+
+    {% else %}
+
+        <form action="" method="post"{% if enctype %} enctype="{{ enctype }}"{% endif %}>
+        {% csrf_token %}
+        <div>
+            {{ form|crispy }}
+            <button type="submit" class="btn btn-success btn-icon-split" aria-label="Save">
+            <span class="icon text-white-50">
+                <i class="fas fa-floppy-disk"></i>
+            </span>
+            <span class="text">Save</span>
+            </button>
+            <a href="{{ back_url }}" aria-label="Cancel" class="btn btn-danger btn-icon-split">
+            <span class="icon text-white-50">
+                <i class="fas fa-xmark"></i>
+            </span>
+            <span class="text">Cancel</span>
+            </a>
+        </div>
+        </form>
+
+    {% endif %}
 
   </div>
 </div>
