--- a/templates/LabLogbook/comment_confirm_delete.html
+++ b/templates/LabLogbook/comment_confirm_delete.html
@@ -6,14 +6,18 @@
 
     {% if machine_generated or deleted %}
 
-      <div class="text-center">
-        <!-- The button for editing machine generated or deleted comment is not shown in logbook view, this is just in case the link is accessed -->
-        {% if machine_generated %}
-        <h1 class="text-gray-900 mb-4">This is a machine generated comment, it cannot be deleted.</h1>
-        {% else %}
-        <h1 class="text-gray-900 mb-4">This comment has been deleted from the logbook, it cannot be deleted again.</h1>
-        {% endif %}
-      </div>
+      
+      <!-- The button for editing machine generated or deleted comment is not shown in logbook view, this is just in case the link is accessed -->
+      {% if machine_generated %}
+        <div class="alert alert-warning" role="alert">
+          This is a machine generated comment, it cannot be deleted.
+        </div>
+      {% else %}
+        <div class="alert alert-warning" role="alert">
+          This comment has been deleted from the logbook, it cannot be deleted again.
+        </div>
+      {% endif %}
+      
 
       <a href="{{ back_url }}" aria-label="Cancel" class="btn btn-danger btn-icon-split">
         <span class="icon text-white-50">
