better messages for when the comment is auto generated or has already been deleted

--- a/templates/LabLogbook/comment_form.html
+++ b/templates/LabLogbook/comment_form.html
@@ -10,9 +10,13 @@
       <div class="text-center">
         <!-- The button for editing machine generated or deleted comment is not shown in logbook view, this is just in case the link is accessed -->
         {% if machine_generated %}
-        <h1 class="text-gray-900 mb-4">This is a machine generated comment, it cannot be edited.</h1>
+          <div class="alert alert-warning" role="alert">
+            This is a machine generated comment, it cannot be edited.
+          </div>
         {% else %}
-        <h1 class="text-gray-900 mb-4">This comment has been deleted from the logbook, it cannot be edited.</h1>
+          <div class="alert alert-warning" role="alert">
+            This comment has been deleted from the logbook, it cannot be edited.
+          </div>
         {% endif %}
       </div>
 
