--- a/templates/LabLogbook/comment_list.html
+++ b/templates/LabLogbook/comment_list.html
@@ -50,6 +50,7 @@
             {% endif %}
             
             <h6 class="m-0 font-weight-bold text-primary">Comment ID: {{ comment.comment_id }} - Content version: {{ latest.version }}</h6>
+            <h6 class="m-0 font-weight-bold text-primary">Content ID: {{ latest.comment_content_id }}</h6>
 
             <!-- Show if the comment has been deleted -->
             {% if not latest.author %}
