--- a/templates/LabLogbook/comment_reply_form.html
+++ b/templates/LabLogbook/comment_reply_form.html
@@ -36,6 +36,7 @@
                 <h6 class="m-0 font-weight-bold text-primary">Refers Measurement ID: {{ comment_to_reply.measurement.measurement_id }} </h6>
               {% endif %}
               <h6 class="m-0 font-weight-bold text-primary">Comment ID: {{ comment_to_reply.comment_id }} - Content version: {{ comment_content_to_reply.version }}</h6>
+              <h6 class="m-0 font-weight-bold text-primary">Content ID: {{ comment_content_to_reply.comment_content_id }}</h6>
               {% if not comment_content_to_reply.author %}
                 <h6 class="m-0 font-weight-bold text-primary">Auto generated - {{ comment_content_to_reply.timestamp }}</h6>
               {% else %}
